# InsightWorks

./: .gitignore  GIT_VERSION_SUMMARY.md  MEMORY_SYSTEM_SUMMARY.md  README.md  RELEASE_V1.0.0.md  SETUP.md  alembic.ini  pyproject.toml  requirements.txt
alembic/: README.md  env.py
alembic/versions/: a1b2c3d4_add_user_profile_and_memory_event.py
app/: main.py
app/api/v1/: chatbot.py
app/core/: config.py  langfuse_client.py
app/core/langgraph/: graph.py
app/core/langgraph/tools/: __init__.py  driving_distance.py  recall_checker.py  road_condition.py  straight_distance.py  timezone_converter.py  tire_pressure.py  traffic_incident.py  unit_converter.py  vin_decoder.py  weather_alert.py
app/core/memory/: __init__.py  classifier.py  retrieval.py
app/core/observability/: __init__.py  memory_spans.py
app/core/prompts/: system.md
app/models/: memory_event.py  user_profile.py
app/schemas/: chat.py  graph.py
app/services/: database.py
docs/: langfuse_memory_dashboard.md  memory_flow.mermaid.md  memory_flow.puml
tests/: __init__.py  run_all_tests.py  test_memory_system.py  test_tools.py
